# src/presentation/http/express/v1/controllers/payment.controller.ts
@@ -1,38 +1,42 @@
-import { CreateExamplePaymentPort } from '@/modules/payment/application/use-cases/create-example-payment/create-example-payment.port';
+import { CreatePaymentPort } from '@/modules/payment/application/use-cases/create-payment/create-payment.port';
 import { GetPaymentPort } from '@/modules/payment/application/use-cases/get-payment/get-payment.port';
 import { BaseController } from '@/presentation/http/express/core/base.controller';
 import { AutoBind } from '@/presentation/http/express/decorators/autoBind.decorator';
 import { ExpressRequest, ExpressResponse } from '@/presentation/http/express/types';
 import {
-  CreateExamplePaymentBodyDTO,
-  PaymentIdParams
+  CreatePaymentBodyDTO,
+  PaymentIdParamsDTO
 } from '@/presentation/http/express/v1/dtos/payment/payment.request.dto';
 import { PaymentResponseDTO } from '@/presentation/http/express/v1/dtos/payment/payment.response.dto';
-import { Created } from '@/presentation/http/express/responses/success.response';
+import { Created, SuccessResponse } from '@/presentation/http/express/responses/success.response';
 import { NextFunction } from 'express';
 import { ParamsDictionary } from 'express-serve-static-core';
 
 export interface IPaymentController {
-  createExample(
-    req: ExpressRequest<ParamsDictionary, object, CreateExamplePaymentBodyDTO>,
+  create(
+    req: ExpressRequest<ParamsDictionary, object, CreatePaymentBodyDTO>,
     res: ExpressResponse,
     next: NextFunction
-  ): Promise<unknown>;
-  getById(req: ExpressRequest<PaymentIdParams>, res: ExpressResponse, next: NextFunction): Promise<unknown>;
+  ): Promise<SuccessResponse<PaymentResponseDTO>>;
+  getById(
+    req: ExpressRequest<PaymentIdParamsDTO>,
+    res: ExpressResponse,
+    next: NextFunction
+  ): Promise<SuccessResponse<PaymentResponseDTO>>;
 }
 
 export class PaymentController extends BaseController implements IPaymentController {
   constructor(
-    private readonly createExamplePayment: CreateExamplePaymentPort,
-    private readonly getPayment: GetPaymentPort
+    private readonly createPaymentUC: CreatePaymentPort,
+    private readonly getPaymentUC: GetPaymentPort
   ) {
     super();
   }
 
   @AutoBind()
-  async createExample(req: ExpressRequest<ParamsDictionary, object, CreateExamplePaymentBodyDTO>) {
+  async create(req: ExpressRequest<ParamsDictionary, object, CreatePaymentBodyDTO>) {
     const idempotencyKey = req.get('Idempotency-Key')?.trim();
-    const payment = await this.createExamplePayment.execute({
+    const payment = await this.createPaymentUC.execute({
       userId: this.getUserId(req),
       provider: req.body.provider,
       idempotencyKey: idempotencyKey ?? '',
@@ -42,16 +46,19 @@ export class PaymentController extends BaseController implements IPaymentControl
     return this.response({
       instance: Created,
       data: new PaymentResponseDTO(payment),
-      message: 'Payment example created'
+      message: 'Payment created'
     });
   }
 
   @AutoBind()
-  async getById(req: ExpressRequest<PaymentIdParams>) {
-    const payment = await this.getPayment.execute({
+  async getById(req: ExpressRequest<PaymentIdParamsDTO>) {
+    const payment = await this.getPaymentUC.execute({
       userId: this.getUserId(req),
       paymentId: req.params.paymentId
     });
-    return this.response({ data: new PaymentResponseDTO(payment), message: 'Payment loaded' });
+    return this.response({
+      data: new PaymentResponseDTO(payment),
+      message: 'Payment loaded'
+    });
   }
 }
